Refactoring and renames for better readability
